kubernetes/applications/media/manifests/radarr/radarr-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr-deployment
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: radarr
  template:
    metadata:
      labels:
        app: radarr
    spec:
      containers:
        - name: radarr
          image: linuxserver/radarr:6.2.1
          volumeMounts:
            - name: config
              mountPath: /config
            - name: media
              mountPath: /media
            - name: run
              mountPath: /run
          ports:
            - containerPort: 7878
          securityContext:
            readOnlyRootFilesystem: true
          resources:
            requests:
              cpu: 50m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      volumes:
        - name: config
          emptyDir: {}
        - name: media
          persistentVolumeClaim:
            claimName: media-pvc
        - name: run
          emptyDir: {}
