kubernetes/applications/media/manifests/radarr/radarr-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: radarr-service
  namespace: media
spec:
  selector:
    app: radarr
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 7878
      targetPort: 7878
